--- a/ATP2B1Sln/ATP2B1/Views/Customer/Detail.cshtml
+++ b/ATP2B1Sln/ATP2B1/Views/Customer/Detail.cshtml
@@ -4,27 +4,33 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Detail</h2>
-@using (Html.BeginForm("Save", "Customer"))
+@using (Html.BeginForm("Detail", "Customer"))
 {
+    @Html.ValidationSummary(true,"Please Fill up the following fields")
     <div class="form-group">
         @Html.LabelFor(m=>m.Customer.Name)
         @Html.TextBoxFor(m=>m.Customer.Name,new {@class="form-control"})
+        @Html.ValidationMessageFor(m=>m.Customer.Name)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MobileNo)
         @Html.TextBoxFor(m => m.Customer.MobileNo, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MobileNo)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MembershipTypeID)
         @Html.DropDownListFor(m => m.Customer.MembershipTypeID, new SelectList(Model.MembershipTypes,"ID","Name"), "Select Membership Type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MembershipTypeID)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.BirthDate)
         @Html.TextBoxFor(m => m.Customer.BirthDate,"{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.BirthDate)
     </div>
     <div class="checkbox">
         <label>
             @Html.CheckBoxFor(m => m.Customer.IsSubscribeToMail) Is Subscribed To Mail?
+            @Html.ValidationMessageFor(m => m.Customer.IsSubscribeToMail)
         </label>
     </div>
     <div>
@@ -34,10 +40,13 @@
         <label class="radio-inline">
             @Html.RadioButtonFor(m => m.Customer.Gender, "Female") Female
         </label>
+        @Html.ValidationMessageFor(m => m.Customer.Gender)
     </div>
     <br/>
     @Html.HiddenFor(m=>m.Customer.ID)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-info">Save</button>
+    @Html.ActionLink("Delete", "Delete", new { Controller = "Customer", id = Model.Customer.ID },new {@class="btn btn-danger"})
 }
 
 
