--- a/ATP2B1Sln/ATP2B1/Views/Customer/Index.cshtml
+++ b/ATP2B1Sln/ATP2B1/Views/Customer/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>Customers</h2>
-@Html.ActionLink("New", "New", new { Controller = "Customer" })
+@Html.ActionLink("New", "Detail", new { Controller = "Customer" }, new { @class = "btn btn-info" })
 <table class="table table-bordered table-striped table-hover">
     <tr>
         <th>Name</th>
@@ -14,6 +14,7 @@
         <th>Type</th>
         <th>Discount</th>
         <th>Detail</th>
+        <th>Delete</th>
     </tr>
     @foreach (var customer in Model)
     {
@@ -23,7 +24,10 @@
             <td>@customer.MembershipType.Name</td>
             <td>@customer.MembershipType.Discount%</td>
             <td>
-                @Html.ActionLink("Detail","Edit",new {Controller="Customer",id=customer.ID})
+                @Html.ActionLink("Detail","Detail",new {Controller="Customer",id=customer.ID})
+            </td>
+            <td>
+                @Html.ActionLink("Delete", "Delete", new { Controller = "Customer", id = customer.ID })
             </td>
         </tr>
     }
